--- a/SysEdu/package.json
+++ b/SysEdu/package.json
@@ -18,7 +18,10 @@
     "dependencies": {
         "@inertiajs/react": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "lodash": "^4.17.21",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.2",
+        "react-transition-group": "^4.4.5"
     }
 }
