--- a/SysEdu/package.json
+++ b/SysEdu/package.json
@@ -22,6 +22,7 @@
         "dayjs": "^1.11.13",
         "lodash": "^4.17.21",
         "react": "^18.3.1",
+        "react-datepicker": "^7.4.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
         "react-transition-group": "^4.4.5"
